--- a/config/splitkb_aurora_corne.conf
+++ b/config/splitkb_aurora_corne.conf
@@ -15,3 +15,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Change board name
 CONFIG_ZMK_KEYBOARD_NAME="Core Nano"
 
+# Mouse config, requires PR #778
+CONFIG_ZMK_MOUSE=y
+CONFIG_ZMK_MOUSE_TICK_DURATION=8
